--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-    "name": "serverless-esbuild-template",
-    "devDependencies": {
-        "@types/aws-lambda": "^8.10.59",
-        "@types/node": "^14.0.27",
-        "@types/serverless": "^1.72.5",
-        "@typescript-eslint/eslint-plugin": "^3.8.0",
-        "@typescript-eslint/parser": "^3.8.0",
-        "esbuild": "^0.6.18",
-        "esbuild-register": "^1.0.2",
-        "eslint": "^7.6.0",
-        "serverless": "^3.27.0",
-        "serverless-esbuild": "^1.39.0",
-        "serverless-offline": "^12.0.4",
-        "ts-node": "^8.10.2",
-        "typescript": "^3.9.7"
-    }
+  "name": "serverless-esbuild-template",
+  "version": "1.0.0",
+  "description": "Serverless template with esbuild",
+  "license": "MIT",
+  "packageManager": "yarn@1.22.19",
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.59",
+    "@types/node": "^16.10.0",
+    "@types/serverless": "^3.12.11",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "esbuild": "^0.16.17",
+    "esbuild-register": "^1.0.2",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^2.8.4",
+    "serverless": "^3.27.0",
+    "serverless-esbuild": "^1.39.0",
+    "serverless-offline": "^12.0.4",
+    "typescript": "^4.9.5"
+  }
 }
