--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Serverless template with esbuild",
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
+  "scripts": {
+    "start": "sls offline start --verbose"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.59",
     "@types/node": "^16.10.0",
@@ -20,7 +23,7 @@
     "prettier": "^2.8.4",
     "serverless": "^3.27.0",
     "serverless-esbuild": "^1.39.0",
-    "serverless-offline": "^12.0.4",
+    "serverless-offline": "^8.3.1",
     "typescript": "^4.9.5"
   }
 }
